mobile fixes, improved pagination spacing

--- a/assets/base.css
+++ b/assets/base.css
@@ -912,6 +912,9 @@ body.dashboard.loaded {
     justify-content: space-between;
     align-items: center;
 }
+.pagination.top {
+    margin: -1em 0 2.5em 0;
+}
 .step-links,
 .current-page {
     display: inline-block;
@@ -982,6 +985,7 @@ body.dashboard.loaded {
     }
     nav.site-nav a.water:hover,
     #page-header.dashboard-header a.water:hover,
+    #page-header.dashboard-header a.current,
     nav.site-nav .water.current {
         background-color: var(--water);
         color: white;
@@ -1031,10 +1035,14 @@ body.dashboard.loaded {
     }
     .home-list,
     .intents-list,
-    .mirrors-grid {
+    .mirrors-grid,
+    .pagination {
         display: flex; 
         flex-direction: column;
         align-items: center;
+    }
+    .pagination div:not(:last-child) {
+        margin-bottom: 1em;
     }
     .page-content {
         padding: 40px 30px;
